# open-harness-engineering

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PLANS.md  README.md  README_RBAC.md
backend/: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  fix_password.py  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260331_0001_baseline.py  20260331_0002_create_rbac_tables.py  20260331_0003_init_menu_data.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: health.py  sys_auth.py  sys_organization.py  sys_resource.py  sys_role.py  sys_user.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  base.py  sys_api_key.py  sys_department.py  sys_organization.py  sys_resource.py  sys_role.py  sys_role_resource.py  sys_session.py  sys_user.py  sys_user_role.py
backend/app/repositories/: sys_organization_repository.py  sys_resource_repository.py  sys_role_repository.py  sys_user_repository.py
backend/app/schemas/: common.py  health.py  sys_organization.py  sys_resource.py  sys_role.py  sys_user.py
backend/app/services/: auth_service.py  health_service.py  sys_organization_service.py  sys_resource_service.py  sys_role_service.py  sys_user_service.py
backend/app/tests/: conftest.py  test_smoke.py
backend/scripts/: generate_db_schema.py
docs/: FRONTEND_PAGES_COMPLETE.md  RBAC_IMPLEMENTATION_SUMMARY.md  RBAC_MIGRATION_PROGRESS.md  RBAC_QUICK_START.md  RBAC_SETUP_COMPLETE.md  UI_MIGRATION_COMPLETE.md
frontend/: AGENTS.md  Dockerfile  (+10 more)
(+201 files in other folders)
